# syntheticgen

./: .gitignore  README.md  launch_synthgen.sh  pyproject.toml  test_lcg.sh  test_resume.sh  test_seeds_no_id.jsonl  test_synthgen.sh
docs/: 01-getting-started.md  02-build-a-pipeline.md  03-scale-up.md  04-custom-flows.md  05-reference.md
examples/long_context/: README.md  instruction.yaml  pipeline.yaml  run.sh  seeds.jsonl
examples/qa_generation/: README.md  pipeline.yaml  run.sh  seeds.jsonl
scripts/: launch_cluster.sh
synthgen/: __init__.py  cli.py  engine.py  pipeline.py  runner.py  utils.py  writer.py
synthgen/flows/: __init__.py  linear.py  think_execute.py
synthgen/pipelines/: long_context.yaml  summary.yaml
tests/smoke/: lcg.sh  resume.sh  seeds.jsonl
